---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Info:
    - Fix 1 gap horizontal underground heat pipes not working
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024. 11. 21
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2024. 11. 23
  Info:
    - Finally support several tiers (that do not connect obviously)
    - Put the underground heat pipes in their own subgroup
    - Toggle the underground heat pipe recipes based on underground availability
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2024. 11. 23
  Info:
    - Begin storing pipes to ground in surfacedata
    - Make new struct constructor prettier
    - Attempt to centralize creating and updating the directional heat pipes
    - Pull surface and force out of the struct
    - Strip even/odd from the localized name since it just got me confused with single/duo
    - Dis & re connect the single/duo when rotating
    - Switch deathrattle to position based lookup
    - Delete the struct of removed pipe to grounds
    - Decrease the selection box of the directional heatpipe
    - Each struct only sets its own mode
    - Fix replacing/upgrading colliding with the old struct
    - Fix deathrattles on a surface being deleted
    - Create the underpass again
    - Fix the entity order fixer
    - Move underpasses into surfacedata
    - Remove underpasses that are no longer valid
    - Update modes and validate underpasses on any pipe to ground deathrattle
    - Mark the invisible heat pipes as unselectable
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 22
  Info: